--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MVC_example_2020_Fall",
+  "name": "mvc_example_2020_fall",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,6 +18,7 @@
     "express": "4.17.1",
     "express-ejs-layouts": "2.5.0",
     "express-session": "1.17.1",
+    "express-validator": "6.6.1",
     "mongoose": "5.10.15"
   }
 }
